--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,23 @@ allure-pytest==2.12.0
 allure-python-commons==2.12.0
 async-generator==1.10
 attrs==22.2.0
+black==23.1.0
 certifi==2022.12.7
+click==8.1.3
 exceptiongroup==1.1.0
+flake8==6.0.0
 h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
 outcome==1.2.0
 packaging==23.0
+pathspec==0.11.0
+platformdirs==3.0.0
 pluggy==1.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
 PySocks==1.7.1
 pytest==7.2.1
 selenium==4.8.0
